# lpddr4-dram-controller-integration-soc

./: .ci.yml  .gitignore  .gitmodules  Makefile  README.md  build.tcl  lpddr4-test-board.xdc  requirements.txt  tristan-ctrl.yml  tristan-xc7-lpddr4-integration.xpr
.github/scripts/: ci.sh
.github/workflows/: ci.yaml
config/: tristan-phy.yml
firmware/: bios.c  bios.mk  headers.mk  linker.ld  west.yml
firmware/app/: CMakeLists.txt  prj.conf
firmware/app/boards/: tristan_vexriscv.overlay
firmware/app/src/: bios.c  main.c  uart_stdio.c
prog/: openocd_xc7_ft4232.cfg
rtl/: dram_phy.v  dram_phy_wrapper.sv  top.v
scripts/: dram_init.py
src/: demosoc.py  generate_lpddr4_soc.py
topwrap/: project.yml
tristan-xc7-lpddr4-integration.srcs/constrs_1/new/: lpddr4-test-board.xdc
tristan-xc7-lpddr4-integration.srcs/sources_1/new/: top.v
vivado/: build.tcl  lpddr4-test-board.xdc
